--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "type": "module",
   "author": "Felipe Kamada",
   "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemo": "^1.0.0",
+    "nodemon": "^3.0.1",
     "prisma": "^5.4.2"
   }
 }
